Removing unneeded things
-Removed built in toolbar

--- a/EducationalAugmentedReality/app/src/main/res/layout/content_main.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/content_main.xml
@@ -16,19 +16,23 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            android:id="@+id/textView" />
+        android:weightSum="1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true">
 
         <FrameLayout
             android:id="@+id/camera_preview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            />
+            android:layout_width="232dp"
+            android:layout_height="416dp">
+
+        </FrameLayout>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/batteryText"
+            android:layout_below="@+id/start"
+            android:layout_alignParentStart="true" />
 
         <Button
             android:layout_width="wrap_content"
@@ -37,13 +41,7 @@
             android:id="@+id/start"
             android:layout_below="@+id/textView"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="27dp" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/batteryText"
-            android:layout_below="@+id/start"
-            android:layout_alignParentStart="true" />
+            android:layout_marginTop="27dp"
+            android:layout_gravity="bottom" />
     </LinearLayout>
 </RelativeLayout>
