--- a/EducationalAugmentedReality/app/src/main/res/layout/content_main.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
     tools:context="com.example.yasmin.educationalaugmentedreality.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -26,9 +26,17 @@
             android:layout_width="1500dp"
             android:layout_height="800dp">
 
+            android:id="@+id/drawSurfaceView"
+            android:layout_width="1500dp"
+            android:layout_height="800dp"
+
+            <FrameLayout
+                android:layout_width="357dp"
+                android:layout_height="549dp"
+                android:layout_gravity="left|top"></FrameLayout>
         </FrameLayout>
 
-    </LinearLayout>
+    </FrameLayout>
 
     <GridLayout
         android:layout_width="561dp"
