--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
     <Button
         android:id="@+id/next"
         android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:onClick="sendMessage"/>
-    
+
 </RelativeLayout>
 
