--- a/EducationalAugmentedReality/app/src/main/res/drawable/rounded_box_transparent.xml
+++ b/EducationalAugmentedReality/app/src/main/res/drawable/rounded_box_transparent.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding = "10dp" >
+    android:padding = "10dp">
 
     <corners
         android:radius="4dp" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:background="@android:color/transparent" />
 
 
 </shape>
