--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.yasmin.educationalaugmentedreality.CrossWordActivity"
+    android:layout_height="match_parent">
 
-    android:id="@+id/grid"
-    android:numColumns="10"
-    android:gravity="center"
-    android:background="@drawable/gradient_background" >
-</GridView>
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="700dp"
+        android:layout_height="match_parent"
+        tools:context="com.example.yasmin.educationalaugmentedreality.CrossWordActivity"
 
+        android:id="@+id/grid"
+        android:numColumns="10"
+        android:gravity="center"
+        android:background="@drawable/gradient_background" >
+    </GridView>
+</LinearLayout>
 
