--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,62 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.yasmin.educationalaugmentedreality.MainActivity">
+    tools:context="com.example.yasmin.educationalaugmentedreality.MainActivity"
+    android:id="@+id/frontScreen">
 
 
     <Button
         android:id="@+id/next"
-        android:text="Button"
+        android:text="Start"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:layout_above="@+id/howButton"
+        android:layout_alignStart="@+id/map" />
 
     <Button
         android:id="@+id/map"
         android:text="Map"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How to play"
+        android:id="@+id/howButton"
+        android:onClick="onClick"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Teacher&apos;s Login"
+        android:id="@+id/teacherButton"
+        android:onClick="onClick"
+        android:layout_below="@+id/howButton"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="39dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera"
+        android:id="@+id/cameraButton"
+        android:onClick="onClick"
+        android:layout_below="@+id/imageView2"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
 
