--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp" />
 
     <TextView
@@ -23,9 +22,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Word"
         android:id="@+id/word"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="32dp" />
+        android:layout_above="@+id/wordField"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,9 +31,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Description"
         android:id="@+id/desc"
-        android:layout_below="@+id/word"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_above="@+id/descField"
+        android:layout_alignStart="@+id/addButton" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,9 +40,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Image"
         android:id="@+id/image"
-        android:layout_below="@+id/desc"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="48dp" />
+        android:layout_above="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="131dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,9 +50,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Location"
         android:id="@+id/textView"
-        android:layout_below="@+id/image"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="54dp" />
+        android:layout_above="@+id/latText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="42dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -63,17 +60,19 @@
         android:layout_height="wrap_content"
         android:text="Search"
         android:id="@+id/searchLoc"
-        android:layout_below="@+id/textView"
-        android:layout_toEndOf="@+id/desc"
-        android:layout_marginStart="70dp" />
+        android:onClick="onClick"
+        android:layout_marginBottom="185dp"
+        android:layout_above="@+id/addButton"
+        android:layout_toEndOf="@+id/lngText" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/wordField"
-        android:layout_below="@+id/word"
-        android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/desc" />
+        android:layout_above="@+id/desc"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="51dp"
+        android:text="                        " />
 
     <EditText
         android:layout_width="wrap_content"
@@ -81,24 +80,32 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/descField"
-        android:layout_below="@+id/desc"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="94dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:layout_alignBottom="@+id/searchLoc"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/searchLoc"
-        android:layout_alignEnd="@+id/textView" />
+        android:id="@+id/latText"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="                                     "
+        android:layout_alignTop="@+id/searchLoc"
+        android:layout_toStartOf="@+id/textView2" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:text="                 "
-        android:layout_alignBottom="@+id/searchLoc"
+        android:id="@+id/lngText"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="                                       "
+        android:layout_alignBottom="@+id/textView2"
         android:layout_toEndOf="@+id/textView2" />
 
     <TextView
@@ -107,16 +114,17 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text=","
         android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/editText3"
-        android:layout_toEndOf="@+id/editText3" />
+        android:layout_alignBottom="@+id/latText"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
         android:id="@+id/addButton"
-        android:layout_below="@+id/editText"
-        android:layout_alignEnd="@+id/searchLoc"
-        android:layout_marginTop="170dp" />
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="110dp" />
 
 </RelativeLayout>
