--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher_map.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher_map.xml
@@ -5,4 +5,18 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yasmin.educationalaugmentedreality.TeacherMapActivity" />
+    tools:context="com.example.yasmin.educationalaugmentedreality.TeacherMapActivity" >
+
+    <Button
+        android:id="@+id/okButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:text="OK"
+        android:onClick="onClick"
+        android:padding="15dp"
+        android:layout_marginTop="20dp"
+        android:paddingRight="10dp"
+        android:textSize="30sp"/>
+
+</fragment>
