--- a/EducationalAugmentedReality/app/src/main/res/drawable/rounded_box_transparent.xml
+++ b/EducationalAugmentedReality/app/src/main/res/drawable/rounded_box_transparent.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding = "20dp">
+    android:padding = "20dp"
+    android:gravity="center">
 
     <corners
         android:radius="5dp" />
