--- a/EducationalAugmentedReality/app/src/main/res/drawable/selected_box.xml
+++ b/EducationalAugmentedReality/app/src/main/res/drawable/selected_box.xml
@@ -6,7 +6,7 @@
     <corners
         android:radius="5dp" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#ffa200" />
 
 
 </shape>
