--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:layout_weight="1"
         android:layout_gravity="fill_horizontal"
@@ -23,6 +24,13 @@
         android:gravity="center"
         android:background="@drawable/gradient_background" >
     </GridView>
+
+    <TextView
+        android:id="@+id/box"
+        android:layout_width="0dp"
+        android:layout_height="0dp">
+
+    </TextView>
 
 
     <LinearLayout
