Making changes to AR stuff, not yet complete!
- Changed size of  camera and surfacedraw so that it takes up around 3/4
of screen rather than the whole screen in order to able to fit in the
crossword part of the app
- Now using suvat to work out the speed and distance travelled by using
x, y and z values (using filter to remove gravity.. need to explain this
in implementation section well)...
- To move in certain directions, use the following:
[0]      |      [1]     |      [2]
---------------------------------------
X         |        Y      |
UP        |    LEFT     |
DOWN   |   RIGHT   |

--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -16,17 +16,20 @@
 
         <FrameLayout
             android:id="@+id/camera_preview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_width="620dp"
+            android:layout_height="850dp"
+            android:layout_gravity="top|center_vertical">
 
         </FrameLayout>
 
-        <com.example.yasmin.educationalaugmentedreality.DrawSurfaceView
-            android:id="@+id/drawSurfaceView"
-            android:layout_width="1500dp"
-            android:layout_height="800dp">
 
-        </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
+        <com.example.yasmin.educationalaugmentedreality.DrawSurfaceView
+                android:id="@+id/drawSurfaceView"
+                android:layout_width="620dp"
+                android:layout_height="850dp"
+                android:layout_gravity="top|center_vertical">
+            </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
+
     </FrameLayout>
 
 </RelativeLayout>
