Attempted changes to Cross Word selection and AR
- Attempted to do the selection of one box selects the whole word,
partially works but a few errors, need to fix these, mainly the word
length is not correct and sometimes does not highlight at right starting
point or goes straight to 0 for some reason, look this up!!!!!

- Tried to work more on AR, not a lot of progress unfortuantley. Really
really need to fix this soon!!!!!!!!!!

- Downloaded Pokemon Go and saw how smooth it felt, its almost as if the
object isnt moving at all, it's that smooth. Also, the pokemon appears
in the center of where you face your camera and no matter where you turn
your screen (even 360), it will still be at the point of origin.... Need
to work on getting something smoother....

--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -18,7 +18,7 @@
             android:id="@+id/camera_preview"
             android:layout_width="620dp"
             android:layout_height="850dp"
-            android:layout_gravity="top|center_vertical">
+            android:layout_gravity="top|center">
 
         </FrameLayout>
 
@@ -27,7 +27,7 @@
                 android:id="@+id/drawSurfaceView"
                 android:layout_width="620dp"
                 android:layout_height="850dp"
-                android:layout_gravity="top|center_vertical">
+                android:layout_gravity="top|center">
             </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
 
     </FrameLayout>
