--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -30,6 +30,15 @@
                 android:layout_gravity="top|center">
             </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="348dp"
+            android:orientation="vertical"
+            android:layout_gravity="bottom|center_vertical"
+            android:background="@drawable/gradient_background">
+
+
+        </LinearLayout>
     </FrameLayout>
 
 </RelativeLayout>
