--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
@@ -38,6 +38,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:padding="20dp"/>
+        android:padding="20dp">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Map"
+            android:id="@+id/mapButton" />
+    </LinearLayout>
 </LinearLayout>
 
