--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher.xml
@@ -135,4 +135,14 @@
         android:layout_above="@+id/wordField"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DONE"
+        android:id="@+id/doneButton"
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="49dp" />
+
 </RelativeLayout>
