--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -37,6 +37,21 @@
             android:layout_gravity="bottom|center_vertical"
             android:background="@drawable/gradient_background">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_gravity="bottom|center_vertical"
+                android:orientation="vertical"
+                android:background ="#ffff0000">
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"
+                android:background ="#ffff9000">
+            </LinearLayout>
 
         </LinearLayout>
     </FrameLayout>
