--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -30,6 +30,7 @@
                 android:layout_gravity="top|center">
             </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="348dp"
@@ -37,8 +38,14 @@
             android:layout_gravity="bottom|center_vertical"
             android:background="@drawable/gradient_background">
 
-            <LinearLayout
+           <LinearLayout
+                android:layout_weight="1"
+                android:layout_gravity="fill_horizontal"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:layout_width="514dp"
                 android:layout_height="100dp"
                 android:layout_gravity="bottom|center_vertical"
                 android:orientation="vertical"
@@ -46,11 +53,21 @@
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_gravity="center_horizontal"
-                android:background ="#ffff9000">
+                android:weightSum="1">
+
+                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="513dp"
+                    android:layout_height="match_parent"
+                    tools:context="com.example.yasmin.educationalaugmentedreality.CrossWordActivity"
+                    android:verticalSpacing="4dp"
+                    android:id="@+id/availableletters"
+                    android:numColumns="6"
+                    android:layout_gravity="center_horizontal"
+                    android:background ="#ffff9000"> >
+                </GridView>
+
             </LinearLayout>
 
         </LinearLayout>
