--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_weight="1"
         android:layout_gravity="fill_horizontal"
@@ -32,7 +34,6 @@
 
     </TextView>
 
-
     <LinearLayout
         android:layout_gravity="fill_vertical"
         android:layout_width="match_parent"
@@ -44,9 +45,9 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Map"
             android:onClick="onClick"
             android:id="@+id/mapButton" />
+
     </LinearLayout>
 </LinearLayout>
 
