--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -28,7 +28,7 @@
                 android:layout_width="620dp"
                 android:layout_height="850dp"
                 android:layout_gravity="top|center">
-            </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
+        </com.example.yasmin.educationalaugmentedreality.DrawSurfaceView>
 
 
         <LinearLayout
@@ -45,7 +45,7 @@
                 android:layout_height="match_parent"/>
 
             <LinearLayout
-                android:layout_width="514dp"
+                android:layout_width="469dp"
                 android:layout_height="100dp"
                 android:layout_gravity="bottom|center_vertical"
                 android:orientation="vertical"
@@ -56,20 +56,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:weightSum="1">
-
                 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="513dp"
+                    android:layout_width="561dp"
                     android:layout_height="match_parent"
                     tools:context="com.example.yasmin.educationalaugmentedreality.CrossWordActivity"
                     android:verticalSpacing="4dp"
                     android:id="@+id/availableletters"
                     android:numColumns="6"
                     android:layout_gravity="center_horizontal"
-                    android:background ="#ffff9000"> >
+                    android:background ="#ffff9000"
+                    android:layout_weight="0.12"> >
                 </GridView>
-
             </LinearLayout>
-
         </LinearLayout>
     </FrameLayout>
 
