--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_main.xml
@@ -17,43 +17,24 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:onClick="onClick"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/exitButton" />
-
-    <Button
-        android:id="@+id/map"
-        android:text="Map"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:onClick="onClick"
+        android:textColor="#ffffff"
+        android:background="@drawable/rounded_button"
+        android:layout_marginBottom="451dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Teacher&apos;s Login"
+        android:text="TEACHER&apos;S LOGIN"
         android:id="@+id/teacherButton"
         android:onClick="onClick"
-        android:layout_below="@+id/playButton"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
+        android:textColor="#ffffff"
+        android:background="@drawable/rounded_button"
+        android:layout_above="@+id/exitButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Camera"
-        android:id="@+id/cameraButton"
-        android:onClick="onClick"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="107dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -61,9 +42,17 @@
         android:text="EXIT"
         android:id="@+id/exitButton"
         android:onClick="onClick"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/teacherButton"
-        android:layout_alignStart="@+id/cameraButton" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="202dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/maintitle"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/playButton" />
 
 </RelativeLayout>
 
