Changes made for viva
- Image selection working
- Incorrect word entered working, vibrates, cleares word and all
selectable letters reappear
- Playing around with whole AR thing

--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_cross_word.xml
@@ -11,7 +11,8 @@
         android:layout_weight="1"
         android:layout_gravity="fill_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient_background"/>
 
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -37,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:background="@drawable/gradient_background">
 
         <Button
             style="?android:attr/buttonStyleSmall"
