--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher_login.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_teacher_login.xml
@@ -25,6 +25,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Username"
         android:id="@+id/usernameField"
+        android:textSize="32dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="317dp" />
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Password"
+        android:textSize="32dp"
         android:id="@+id/passwordField"
         android:layout_below="@+id/usernameField"
         android:layout_centerHorizontal="true"
@@ -45,13 +47,15 @@
         android:id="@+id/userText"
         android:layout_below="@+id/usernameField"
         android:layout_centerHorizontal="true"
-        android:text="                      " />
+        android:text="" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/passwordText"
+        android:inputType = "textPassword"
+        android:onClick="onClick"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:text="                       " />
+        android:text="" />
 </RelativeLayout>
