--- a/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
+++ b/EducationalAugmentedReality/app/src/main/res/layout/activity_camera.xml
@@ -65,6 +65,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:weightSum="1">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.60"></LinearLayout>
+
                 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="561dp"
                     android:layout_height="match_parent"
